--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 bencode.py==1.2.0
 Flask_Migrate==2.0.4
 Flask_Admin==1.5.0
-Flask==0.12.2
+Flask>=0.12.3
 Flask_Caching==1.3.2
 Flask_Script==2.0.5
 requests==2.20.0
